--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Quicksand:bold');
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,700');
 html body {
   min-height: 100vh;
   overflow-x: hidden;
@@ -7,7 +7,7 @@ html body {
 /* Global Styles */
 
 body {
-  font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+  font-family: 'Roboto', 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 16px;
   color: #000000;
 }
@@ -195,6 +195,9 @@ a.btn-yellow:hover {
 }
 
 @media screen and (max-width: 568px) {
+  .App {
+    padding-top: 100px;
+  }
   .container {
     width: 100%;
   }
