--- a/src/components/class-schedule/ClassSchedule.css
+++ b/src/components/class-schedule/ClassSchedule.css
@@ -106,7 +106,7 @@ background-size: 100% auto;
   .schedule-container iframe {
     height: 670px;
     width: 480px;
-    margin: 50px auto 0 auto;
+    margin: 0 auto;
     display: block;
   }
 }
@@ -114,7 +114,6 @@ background-size: 100% auto;
 @media screen and (max-width: 568px) {
   .schedule-container {
     margin: 0 auto;
-    background-size: 100% 100%;
   }
   .schedule-container .calendar-class-container {
     width: 100%;
@@ -145,7 +144,7 @@ background-size: 100% auto;
   .schedule-container iframe {
     height: 670px;
     width: 100vw;
-    margin: 60px auto 0 auto;
+    margin: 0 auto;
     display: block;
     padding: 0;
     position: absolute;
