--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -19,6 +19,7 @@
 .contact-container p.heading {
   font-size: 40px;
   text-align: center;
+  padding: 20px 0 10px 0;
 }
 
 .contact-container div#wrap {
