--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -39,7 +39,7 @@ a.go-to-registration {
 }
 
 .home-container .home-img:hover {
-  /* opacity: 0.6; */
+  opacity: 0.6;
 }
 
 .home-container .jack-rabbit-img {
