--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -32,7 +32,7 @@ a.go-to-registration {
 .home-container .home-img {
   background: url('../../images/site/home.png') center no-repeat;
   background-size: 100%;
-  width: 1000px;
+  width: 100%;
   height: 500px;
   display: block;
   margin: 35px auto;
