--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,16 +1,13 @@
-.home-container .quote {
-  position: absolute;
-  top: 160px;
-  margin-left: 18px;
-  font-size: 30px;
-}
-
 a.go-to-registration {
   color: black;
 }
 
 .home-container .wrap {
   padding: 0 140px;
+}
+
+.home-container .video-container {
+  margin-top: 50px;
 }
 
 .home-container .video-container iframe {
@@ -31,11 +28,11 @@ a.go-to-registration {
 
 .home-container .home-img {
   background: url('../../images/site/home.png') center no-repeat;
-  background-size: 100%;
+  background-size: contain;
   width: 100%;
   height: 500px;
   display: block;
-  margin: 35px auto;
+  margin: 20px auto 0 auto;
 }
 
 .home-container .home-img:hover {
@@ -65,12 +62,11 @@ a.go-to-registration {
     width: 530px;
     height: 252px;
   }
-  .home-container .quote {
-    top: 128px;
-    bottom: 0;
-  }
   .home-container .wrap {
     padding: 0;
+  }
+  .home-container .video-container {
+    margin-top: 5px;
   }
 }
 
@@ -78,11 +74,7 @@ a.go-to-registration {
 
 /* Landscape*/
 
-@media only screen and (min-device-width: 1366px) and (max-device-height: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {
-  .home-container .quote {
-    top: 168px;
-  }
-}
+@media only screen and (min-device-width: 1366px) and (max-device-height: 1024px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: landscape) {}
 
 /* Portrait*/
 
@@ -95,9 +87,6 @@ a.go-to-registration {
   .home-container .video-container iframe {
     width: 530px;
     height: 252px;
-  }
-  .home-container .quote {
-    top: 165px;
   }
 }
 
@@ -117,8 +106,8 @@ a.go-to-registration {
     width: 600px;
     height: 400px;
   }
-  .home-container .quote {
-    top: 168px;
+  .home-container .video-container {
+    margin-top: 5px;
   }
 }
 
@@ -138,11 +127,6 @@ a.go-to-registration {
   .home-container .donate-button-wrap {
     position: static;
     margin-top: 30px;
-  }
-  .home-container .quote {
-    top: 115px;
-    font-size: 13px;
-    margin-left: 90px;
   }
   .home-container .wrap {
     padding: 0;
@@ -175,13 +159,11 @@ a.go-to-registration {
   .home-container .jack-rabbit-img {
     margin: 30px auto 50px;
   }
-  .home-container .quote {
-    top: 115px;
-    margin-left: 58px;
-    font-size: 13px;
-  }
   .home-container .wrap {
     padding: 0;
+  }
+  .home-container .video-container {
+    margin-top: 5px;
   }
 }
 
@@ -208,14 +190,13 @@ a.go-to-registration {
   .home-container .jack-rabbit-img {
     margin: 30px auto 50px;
   }
-  .home-container .quote {
-    top: 111px;
-    font-size: 13px;
-  }
   .home-container .wrap {
     padding: 0;
   }
   .home-container .jack-rabbit-img {
     height: 60px;
+  }
+  .home-container .video-container {
+    margin-top: 5px;
   }
 }
