new site images

--- a/src/components/class-attire/ClassAttire.css
+++ b/src/components/class-attire/ClassAttire.css
@@ -9,7 +9,7 @@
 }
 
 .class-attire-container .class-attire-img {
-  background: url('../../images/site/about.jpg') no-repeat;
+  background: url('../../images/bkgrnd/attire.jpg') no-repeat;
   background-size: 100% auto;
 }
 
