--- a/src/components/class-schedule/ClassSchedule.css
+++ b/src/components/class-schedule/ClassSchedule.css
@@ -3,7 +3,7 @@
 }
 
 .schedule-container .schedule-img {
-background: url('../../images/site/schedule.jpg') no-repeat;
+background: url('../../images/bkgrnd/schedule.jpg') no-repeat;
 background-size: 100% auto;
 }
 
