--- a/src/components/mission/Mission.css
+++ b/src/components/mission/Mission.css
@@ -9,7 +9,7 @@
 }
 
 .mission-container .mission-img {
-  background: url('../../images/site/about.jpg') no-repeat;
+  background: url('../../images/bkgrnd/philosophy.jpg') no-repeat;
   background-size: 100% auto;
 }
 
