--- a/src/components/tuition/Tuition.css
+++ b/src/components/tuition/Tuition.css
@@ -9,7 +9,7 @@
 }
 
 .tuition-container .tuition-img {
-  background: url('../../images/site/financial-aid.jpg') no-repeat;
+  background: url('../../images/bkgrnd/tuition.jpg') no-repeat;
   background-size: 100% auto;
 }
 
