--- a/src/App.css
+++ b/src/App.css
@@ -215,3 +215,13 @@ a.btn-yellow:hover {
     width: 100vw;
   }
 }
+
+/* ----------- iPad Pro ----------- */
+
+/* Portrait*/
+
+@media only screen and (min-device-width: 1024px) and (max-device-height: 1366px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
+  .App {
+    padding-top: 130px;
+  }
+}
