--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -7,7 +7,7 @@ a.go-to-registration {
 }
 
 .home-container .video-container {
-  margin-top: 50px;
+  clear: both;
 }
 
 .home-container .video-container iframe {
@@ -30,12 +30,39 @@ a.go-to-registration {
   opacity: 0.6;
 }
 
+.home-container .image-links {
+  width: 100%;
+  display: block;
+  margin: 30px auto 30px auto;
+  text-align: center;
+  /* padding: 0 140px; */
+}
+
+.home-container .image-links .img-link {
+  display: inline-block;
+  padding-right: 12.5px;
+}
+
+.home-container .image-links .img-link img {
+  height: 160px;
+  padding: 0;
+  margin: 0;
+}
+
+.home-container .image-links .new-classes:hover, .home-container .image-links .calendar:hover, .home-container .image-links .performances:hover, .home-container .image-links .handbook-policies:hover {
+  opacity: 0.6;
+}
+
+.home-container .image-links .img-link:last-child {
+  padding-right: 0;
+}
+
 .home-container .jack-rabbit-img {
   background: url('../../images/site/badge.png') center no-repeat;
   background-size: contain;
   display: block;
   height: 70px;
-  margin: 30px auto 40px auto;
+  margin: 30px auto 50px auto;
 }
 
 /* 
@@ -57,7 +84,27 @@ a.go-to-registration {
     padding: 0;
   }
   .home-container .video-container {
-    margin-top: 5px;
+    margin-top: 30px;
+  }
+  .home-container .image-links {
+    margin: 0 auto;
+    width: 90%;
+  }
+  .home-container .image-links .img-link {
+    width: 50%;
+    padding: 0;
+  }
+  .home-container .image-links .img-link img {
+    width: 100%;
+    height: auto;
+    margin-bottom: 10px;
+    padding-right: 0;
+  }
+  .home-container .image-links .new-classes, .home-container .image-links .performances {
+    padding-right: 5px;
+  }
+  .home-container .image-links .calendar, .home-container .image-links .handbook-policies {
+    padding-left: 5px;
   }
 }
 
@@ -98,7 +145,7 @@ a.go-to-registration {
     height: 400px;
   }
   .home-container .video-container {
-    margin-top: 5px;
+    margin-top: 30px;
   }
 }
 
