--- a/src/components/class-new/ClassNew.css
+++ b/src/components/class-new/ClassNew.css
@@ -25,8 +25,9 @@
 }
 
 .new-classes-container .heading {
-  font-size: 30px;
+  font-size: 40px;
   padding-top: 8px;
+  text-align: center;
 }
 
 .new-classes-container .sub-title {
