--- a/src/components/performances/Performances.css
+++ b/src/components/performances/Performances.css
@@ -21,8 +21,9 @@
 }
 
 .performances-container .heading {
-  font-size: 30px;
-  padding: 20px 0 30px 0;
+  font-size: 40px;
+  padding-top: 8px;
+  text-align: center;
 }
 
 .performances-container .sub-title {
