--- a/src/components/financial-aid/FinancialAid.css
+++ b/src/components/financial-aid/FinancialAid.css
@@ -1,4 +1,5 @@
 /* financial-aid Container */
+
 .financial-aid-container {
   margin: 0 auto;
 }
@@ -16,6 +17,10 @@
 
 .financial-aid-container .content p {
   padding: 20px 30px 0 20px;
+}
+
+.financial-aid-container .content p:nth-child(2) {
+  padding-top: 10px;
 }
 
 .financial-aid-container .content p:last-child {
