--- a/src/components/tuition/Tuition.css
+++ b/src/components/tuition/Tuition.css
@@ -83,12 +83,11 @@
   .tuition-container .table {
     margin: 0 auto;
   }
-
   .tuition-container p {
     margin: 0 auto;
     width: 100vw;
+    padding: 0 10px 0 17px;
   }
-
   .tuition-container .centerRow {
     width: auto;
   }
